<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yougis</string>
    <string name="action_settings">Seleziona WFS</string>
    <string name="downloadButton">Scarica</string>
    <string name="disegnaButton">Inizia</string>
    <string name="xml_error">Errore nel foglio XML</string>
    <string name="connection_error">Errore di connessione</string>
    <string name="action_buffer">Buffer</string>
    <string name="action_intersection">Intersezione</string>
    <string name="selectLayer">Seleziona il layer</string>
    <string name="selectAll">Seleziona singoli elementi</string>
    <string name="distanceHint">Distanza (in metri)</string>
    <string name="dissolve">Dissolvi</string>
    <string name="name">Nome nuovo layer</string>
    <string name="save">Salva</string>
    <string name="selectGeometry">Seleziona geometria</string>
    <string name="selectSecondLayer">Seleziona il secondo layer</string>
    <string name="selectFirstLayer">Seleziona il primo layer</string>
    <string name="aggiungiButton">Aggiungi</string>
    <string name="selectLayerIntersection">Layer di intersezione</string>
    <string name="segmentsNumberHint">Numero di segmenti (opzionale)</string>
    <string name="welcomeText">Benvenuto in Yougis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manageWFS">Gestisci WFS</string>

</resources>
