<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/name"
            android:singleLine="true"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectLayer"
            android:prompt="@string/selectLayer"></Spinner>

        <com.example.wfsclient.teammolise.MultiSelectionSpinner
            android:id="@+id/selectGeometry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:id="@+id/selectAllObjects" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/bufferingDistance"
            android:layout_weight="1"
            android:hint="@string/distanceHint"
            android:password="false"
            android:phoneNumber="false"
            android:numeric="integer|signed" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/segmentsNumber"
            android:layout_weight="1"
            android:hint="@string/segmentsNumberHint"
            android:password="false"
            android:phoneNumber="false"
            android:numeric="integer" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dissolve"
            android:text="@string/dissolve" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chiudi"
            android:id="@+id/closeBtn"
            android:gravity="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/okBtn"
            android:gravity="center" />

    </LinearLayout>


</LinearLayout>
