<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/name"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectFirstLayer"
            android:prompt="@string/selectFirstLayer"></Spinner>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectGeometry"
            android:id="@+id/selectGeometry1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/input1GeometrySelector">

            <com.example.wfsclient.teammolise.MultiSelectionSpinner
                android:id="@+id/selectGeometry1Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectAll"
                android:id="@+id/selectGeometry1All" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectSecondLayer"
            android:prompt="@string/selectSecondLayer"></Spinner>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectGeometry"
            android:id="@+id/selectGeometry2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/input2GeometrySelector">

            <com.example.wfsclient.teammolise.MultiSelectionSpinner
                android:id="@+id/selectGeometry2Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectAll"
                android:id="@+id/selectGeometry2All" />
        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
