<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/name"
            android:singleLine="true"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectLayer1"
            android:prompt="@string/selectLayer"></Spinner>

        <com.example.wfsclient.teammolise.MultiSelectionSpinner
            android:id="@+id/selectGeometry1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:id="@+id/selectAllObjects1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectLayer2"
            android:prompt="@string/selectLayerIntersection"></Spinner>

        <com.example.wfsclient.teammolise.MultiSelectionSpinner
            android:id="@+id/selectGeometry2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:id="@+id/selectAllObjects2" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chiudi"
            android:id="@+id/closeBtn"
            android:gravity="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/okBtn"
            android:gravity="center" />

    </LinearLayout>


</LinearLayout>
